crates/specforge-cli/tests/snapshots/tests__inspect_views__context_fx1_login.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: "normalized(&result, root)"
---
{
  "description": "Get structured context for implementing an entity",
  "messages": [
    {
      "content": {
        "text": "You are implementing the entity 'login' (kind: behavior). Use the structured context below to guide your implementation. Respect the contract (or the guarantee, rationale or other text in its fields), satisfy verify expectations, and consider upstream/downstream dependencies.",
        "type": "text"
      },
      "role": "user"
    },
    {
      "content": {
        "text": "{\"contract_text\":\"The system MUST let a known user log in\",\"downstream_entities\":[\"signin\"],\"entity_id\":\"login\",\"fields\":{\"contract\":\"The system MUST let a known user log in\",\"features\":[\"signin\"],\"verify\":[{\"description\":\"a known user logs in\",\"kind\":\"unit\"}]},\"kind\":\"behavior\",\"structural_constraint_entities\":[],\"structural_constraints\":[],\"upstream_entities\":[],\"verify_expectations\":[\"unit a known user logs in\"]}",
        "type": "text"
      },
      "role": "user"
    }
  ]
}
