crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_cyc_alpha.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
assertion_line: 146
expression: markdown
---
**W061** · Reference cycle detected

reference cycle detected: alpha -> beta -> alpha

The resolved reference graph contains a cycle among entity references. Break the cycle by removing or inverting one of the references in the reported path.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w061)

---

**W020** · Unrecognized field

unrecognized field 'depends_on' on entity 'alpha' of kind 'behavior' at a.spec

An entity sets a field that isn't declared for its kind by any installed extension. Remove the field, fix a typo in its name, or install the extension that declares it.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w020)

---

**W006** · Behavior missing category

behavior 'alpha' has no category — agents use category for task routing

A `behavior` entity has no `category` field, which agents rely on for task routing. Add a `category` field to the behavior.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w006)

---

**E006** · Missing required field

behavior 'alpha' is missing required field 'contract'

An entity is missing a field marked `required: true` for its kind in the field registry. Add the missing field to the entity.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#e006)

---

Method **behavior** `alpha` — A

A testable unit of system functionality with a defined contract
*@specforge/software*

---

**Refers to** *(1)*
- `depends_on` → beta

---

**Referenced by** *(1)*
- behavior via `depends_on`: beta

---

**Fields**
- `depends_on` = [beta]
