crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_cyc_beta.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: markdown
---
**W020** · Unrecognized field

unrecognized field 'depends_on' on entity 'beta' of kind 'behavior' at a.spec

An entity sets a field that isn't declared for its kind by any installed extension. Remove the field, fix a typo in its name, or install the extension that declares it.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w020)

---

**W006** · Behavior missing category

behavior 'beta' has no category — agents use category for task routing

A `behavior` entity has no `category` field, which agents rely on for task routing. Add a `category` field to the behavior.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w006)

---

**E006** · Missing required field

behavior 'beta' is missing required field 'contract'

An entity is missing a field marked `required: true` for its kind in the field registry. Add the missing field to the entity.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#e006)

---

**behavior** `beta` — B

A testable unit of system functionality with a defined contract
*@specforge/software*

---

**Refers to** *(1)*
- `depends_on` → alpha

---

**Referenced by** *(1)*
- behavior via `depends_on`: alpha

---

**Fields**
- `depends_on` = [alpha]

---

**Diagnostics** *(1)*
- [**W061**](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w061) reference cycle detected: alpha -> beta -> alpha
