crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_fx1_Payload.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
assertion_line: 139
expression: markdown
---
**W002** · Unreferenced type

type 'Payload' is not referenced by any behavior, port, or type

A `type` entity has no incoming references from any `behavior`, `port`, or other `type`. Reference the type where it's used, or remove it if it's dead.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w002)

---

**type** `Payload` — Payload

A data structure or domain model definition
*@specforge/software* · `testable` · `verify`

---

**Coverage** · `covered` · 1/1 obligations proven · 1 test

---

**Fields**
- `verify` = `string`
- `verify` = unit: Payload schema is valid
