crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_fx1_Status.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
expression: markdown
---
**W002** · Unreferenced type

type 'Status' is not referenced by any behavior, port, or type

A `type` entity has no incoming references from any `behavior`, `port`, or other `type`. Reference the type where it's used, or remove it if it's dead.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w002)

---

**type** `Status`

A data structure or domain model definition
*@specforge/software* · `testable` · `verify`

---

**Coverage** · exempt: it owes none (a union or an exempting field)

---

**Fields**
- `variants` = [active | inactive]
