crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_fx1_login.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
assertion_line: 139
expression: markdown
---
**W006** · Behavior missing category

behavior 'login' has no category — agents use category for task routing

A `behavior` entity has no `category` field, which agents rely on for task routing. Add a `category` field to the behavior.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#w006)

---

Method **behavior** `login` — Log in

A testable unit of system functionality with a defined contract
*@specforge/software* · `testable` · `verify`

---

**Refers to** *(1)*
- `features` → signin

---

**Fields**
- `contract` = "The system MUST let a known user log in"
- `features` = [signin]
- `verify` = unit: a known user logs in
