crates/specforge-cli/tests/snapshots/tests__inspect_views__hover_fx1_signin.snap
---
source: crates/specforge-cli/tests/inspect_views.rs
assertion_line: 139
expression: markdown
---
**I048** · Feature without acceptance criteria

feature 'signin' has no acceptance criteria

A `feature` has no `acceptance` field, or an empty one. Add acceptance criteria describing when the feature is done; they can be added progressively.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#i048)

---

**I080** · Entity without owner

feature 'signin' has no owner

A `feature`, `milestone`, `deliverable` or `release` has no `owner` field. Set `owner` to the person or team responsible.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#i080)

---

**I081** · Feature without effort estimate

feature 'signin' has no effort estimate

A `feature` has no `effort` field. Set `effort` to one of xs, s, m, l, xl.

[Documentation](https://github.com/leaderiop/SpecForge/blob/main/docs/diagnostics.md#i081)

---

Class **feature** `signin` — Sign in

A user-facing capability that solves a specific problem
*@specforge/product*

---

**Referenced by** *(1)*
- behavior via `features`: login

---

**Fields**
- `problem` = "Users cannot reach their data"
- `solution` = "Let them log in"
